--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>EmberQuickstart</title>
+    <title>Frontend VLAG POC</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -13,6 +13,11 @@
       integrity=""
       rel="stylesheet"
       href="{{rootURL}}assets/frontend-vlag-poc.css"
+    />
+    <link
+      rel="shortcut icon"
+      href="/assets/images/favicon.svg"
+      type="image/x-icon"
     />
 
     {{content-for "head-footer"}}
